# cliop

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  makefile  readme-zh.md  readme.md  todo.md
docs/: Doxyfile
sample/: argview.cpp  makefile  math.cpp  readme-zh.md  readme.md  sample.txt  sum.cpp  textalign.cpp
src/: cliop.cpp  cliop.h  util-string.cpp  util-string.h
utest/: test-cliop.cpp  test-config.ini  test-error.cpp  test-os.h  test-string.cpp  test-subcmd.cpp
